@@ -1,8 +1,8 @@
 {
   "timestamp" : "2024-05-25T08:15:10Z",
-  "count" : 132,
-  "count_minmax" : [ 113, 297 ],
-  "count_decinc" : [ -165, +297 ],
+  "count" : 111,
+  "count_minmax" : [ 111, 111 ],
+  "count_decinc" : [ -0, +111 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
