@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-05-25T00:53:52Z",
+  "timestamp" : "2024-05-25T08:15:10Z",
   "count_outdated" : 206956,
   "uniques_outdated" : 2047,
-  "count" : 211110,
-  "uniques" : 2077,
+  "count" : 211221,
+  "uniques" : 2079,
   "clones" : [
     {
       "timestamp": "2024-05-11T00:00:00Z",
-      "count": 247,
+      "count": 132,
       "count_minmax": [ 113, 297 ],
-      "count_decinc": [ 50, 297 ],
+      "count_decinc": [ 165, 297 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -127,6 +127,15 @@
       "count": 297,
       "count_minmax": [ 111, 297 ],
       "count_decinc": [ 0, 297 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-05-25T00:00:00Z",
+      "count": 111,
+      "count_minmax": [ 111, 111 ],
+      "count_decinc": [ 0, 111 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
