@@ -1,10 +1,10 @@
 {
-  "count": 4104,
+  "count": 4100,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-05-11T00:00:00Z",
-      "count": 247,
+      "count": 132,
       "uniques": 2
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-05-24T00:00:00Z",
       "count": 297,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2024-05-25T00:00:00Z",
+      "count": 111,
       "uniques": 2
     }
   ]
